# sorbet

./: WORKSPACE
.buildkite/: pipeline.yaml  release-static.sh
cfg/: CFG.h
cfg/proto/: proto.cc  proto.h
common/: Counters.cc  Counters.h  common.cc
core/: Error.cc  Error.h  Symbols.h  Types.h
core/errors/: resolver.h
core/lsp/: QueryResponse.cc  QueryResponse.h
core/proto/: proto.cc  proto.h
core/types/: calls.cc  types.cc
definition_validator/: validator.cc
gems/sorbet/: BUILD
gems/sorbet-runtime/test/: test_helper.rb
gems/sorbet/lib/: serialize.rb
infer/: SigSuggestion.cc  environment.cc  inference.cc
main/: realmain.cc
main/autogen/: autogen.cc  autogen.h
main/lsp/: DefLocSaver.cc  LSPMessage.cc  LSPMessage.h  lsp.h  lsp_helpers.cc  protocol.cc  request_dispatch.cc  updates.cc
main/lsp/requests/: definition.cc  hover.cc  references.cc  signature_help.cc  sorbet_workspace_edit.cc
main/options/: options.cc  options.h
main/pipeline/: pipeline.cc
proto/: CFG.proto  Symbol.proto  Type.proto
rbi/sorbet/: builder.rbi  sig.rbi  t.rbi
resolver/: type_syntax.cc
test/: test_corpus.cc
test/cli/: cli_test.bzl
test/cli/autogen-autoloader/: autogen-autoloader.out  autogen-autoloader.sh  bar.rb  bar2.rb  foo.rb
test/cli/autogen-subclasses/: autogen-subclasses.sh
test/cli/cache-keeps-print-options/: cache-keeps-print-options.out
test/cli/cfg-proto/: cfg-proto.out  cfg-proto.sh
test/cli/dash-e/: dash-e.out
test/testdata/: call_with_block_strict.rb  call_with_splat_and_block_strict.rb
website/: BUILD.bazel
(+640 files in other folders)
